learning-more-bootstrap

--- a/framework.html
+++ b/framework.html
@@ -5,65 +5,106 @@
 
 </head>
 <body>
-    <div class="row">
-        <div class="col-md-3">
-                <h1>hoofding1</h1>
-                <p>
-                    Lorem ipsum dololorem congue Nulla hendrerit quis ipsum non cursus. Nam semper lorem ut convallis tincidunt. Quisque pellentesque lacus ligula, condimentum sollicitudin nulla tincidunt in. Quisque ultrices commodo feugiat. Vivamus sit amet lacus at massa rutrum luctus.
-                    Nam mi ex,  vel
-                </p>
+    <div class="alert alert-info" role="alert">
+        <div class="row">
+            <div class="col-md-3">
+                    <div class="alert alert-light" role="alert">
+                        <div class="alert alert-secondary" role="alert">
+                                <h1>hoofding1</h1>
+                            </div>    
+                        <p>
+                            Lorem ipsum dololorem congue Nulla hendrerit quis ipsum non cursus. Nam semper lorem ut convallis tincidunt. Quisque pellentesque lacus ligula, condimentum sollicitudin nulla tincidunt in. Quisque ultrices commodo feugiat. Vivamus sit amet lacus at massa rutrum luctus.
+                            Nam mi ex,  vel
+                        </p>
+                        <button type="button" class="btn btn-secondary">learn more</button>
+                    </div>
+            </div>
+            <div class="col-md-3">
+                    <div class="alert alert-light" role="alert">
+                        <div class="alert alert-secondary" role="alert">
+                            <h1>hoofding1</h1>
+                        </div>
+                        <p>
+                            Lorem ipsum dololorem congue Nulla hendrerit quis ipsum non cursus. Nam semper lorem ut convallis tincidunt. Quisque pellentesque lacus ligula, condimentum sollicitudin nulla tincidunt in. Quisque ultrices commodo feugiat. Vivamus sit amet lacus at massa rutrum luctus.
+                            Nam mi ex,  vel
+                        </p>
+                        <button type="button" class="btn btn-secondary">learn more</button>
+                    </div>
+            </div>
+            <div class="col-md-3">
+                    <div class="alert alert-light" role="alert">
+                        <div class="alert alert-secondary" role="alert">
+                            <h1>hoofding1</h1>
+                        </div>
+                        <p>
+                            Lorem ipsum dololorem congue Nulla hendrerit quis ipsum non cursus. Nam semper lorem ut convallis tincidunt. Quisque pellentesque lacus ligula, condimentum sollicitudin nulla tincidunt in. Quisque ultrices commodo feugiat. Vivamus sit amet lacus at massa rutrum luctus.
+                            Nam mi ex,  vel
+                        </p>
+                        <button type="button" class="btn btn-secondary">learn more</button>
+                    </div>
+            </div>
+            <div class="col-md-3">
+                    <div class="alert alert-light" role="alert">
+                        <div class="alert alert-secondary" role="alert">
+                            <h1>hoofding1</h1>
+                        </div>
+                        <p>
+                            Lorem ipsum dololorem congue Nulla hendrerit quis ipsum non cursus. Nam semper lorem ut convallis tincidunt. Quisque pellentesque lacus ligula, condimentum sollicitudin nulla tincidunt in. Quisque ultrices commodo feugiat. Vivamus sit amet lacus at massa rutrum luctus.
+                            Nam mi ex,  vel
+                        </p>
+                        <button type="button" class="btn btn-secondary">learn more</button>
+                    </div>
+            </div>
         </div>
-        <div class="col-md-3">
-                <h1>hoofding1</h1>
-                <p>
-                    Lorem ipsum dololorem congue Nulla hendrerit quis ipsum non cursus. Nam semper lorem ut convallis tincidunt. Quisque pellentesque lacus ligula, condimentum sollicitudin nulla tincidunt in. Quisque ultrices commodo feugiat. Vivamus sit amet lacus at massa rutrum luctus.
-                    Nam mi ex,  vel
-                </p>
-        </div>
-        <div class="col-md-3">
-                <h1>hoofding1</h1>
-                <p>
-                    Lorem ipsum dololorem congue Nulla hendrerit quis ipsum non cursus. Nam semper lorem ut convallis tincidunt. Quisque pellentesque lacus ligula, condimentum sollicitudin nulla tincidunt in. Quisque ultrices commodo feugiat. Vivamus sit amet lacus at massa rutrum luctus.
-                    Nam mi ex,  vel
-                </p>
-        </div>
-        <div class="col-md-3">
-                <h1>hoofding1</h1>
-                <p>
-                    Lorem ipsum dololorem congue Nulla hendrerit quis ipsum non cursus. Nam semper lorem ut convallis tincidunt. Quisque pellentesque lacus ligula, condimentum sollicitudin nulla tincidunt in. Quisque ultrices commodo feugiat. Vivamus sit amet lacus at massa rutrum luctus.
-                    Nam mi ex,  vel
-                </p>
-        </div>
+        <div class="row">
+                <div class="col-md-3">
+                        <div class="alert alert-light" role="alert">
+                            <div class="alert alert-secondary" role="alert">
+                                <h1>hoofding1</h1>
+                            </div>
+                            <p>
+                                Lorem ipsum dololorem congue Nulla hendrerit quis ipsum non cursus. Nam semper lorem ut convallis tincidunt. Quisque pellentesque lacus ligula, condimentum sollicitudin nulla tincidunt in. Quisque ultrices commodo feugiat. Vivamus sit amet lacus at massa rutrum luctus.
+                                Nam mi ex,  vel
+                            </p>
+                            <button type="button" class="btn btn-secondary">learn more</button>
+                        </div>
+                </div>
+                <div class="col-md-3">
+                        <div class="alert alert-light" role="alert">
+                            <div class="alert alert-secondary" role="alert">
+                                <h1>hoofding1</h1>
+                            </div>
+                            <p>
+                                Lorem ipsum dololorem congue Nulla hendrerit quis ipsum non cursus. Nam semper lorem ut convallis tincidunt. Quisque pellentesque lacus ligula, condimentum sollicitudin nulla tincidunt in. Quisque ultrices commodo feugiat. Vivamus sit amet lacus at massa rutrum luctus.
+                                Nam mi ex,  vel
+                            </p>
+                            <button type="button" class="btn btn-secondary">learn more</button>
+                        </div>
+                </div>
+                <div class="col-md-3">
+                        <div class="alert alert-light" role="alert">
+                            <div class="alert alert-secondary" role="alert">
+                                <h1>hoofding1</h1>
+                            </div>
+                            <p>
+                                Lorem ipsum dololorem congue Nulla hendrerit quis ipsum non cursus. Nam semper lorem ut convallis tincidunt. Quisque pellentesque lacus ligula, condimentum sollicitudin nulla tincidunt in. Quisque ultrices commodo feugiat. Vivamus sit amet lacus at massa rutrum luctus.
+                                Nam mi ex,  vel
+                            </p>
+                            <button type="button" class="btn btn-secondary">learn more</button>
+                        </div>
+                </div>
+                <div class="col-md-3">
+                        <div class="alert alert-light" role="alert">
+                            <div class="alert alert-secondary" role="alert">
+                                <h1>hoofding1</h1>
+                            </div>
+                            <p>
+                                Lorem ipsum dololorem congue Nulla hendrerit quis ipsum non cursus. Nam semper lorem ut convallis tincidunt. Quisque pellentesque lacus ligula, condimentum sollicitudin nulla tincidunt in. Quisque ultrices commodo feugiat. Vivamus sit amet lacus at massa rutrum luctus.
+                                Nam mi ex,  vel
+                            </p>
+                            <button type="button" class="btn btn-secondary">learn more</button>
+                        </div>
+                </div>
+            </div>
     </div>
-    <div class="row">
-            <div class="col-md-3">
-                    <h1>hoofding1</h1>
-                    <p>
-                        Lorem ipsum dololorem congue Nulla hendrerit quis ipsum non cursus. Nam semper lorem ut convallis tincidunt. Quisque pellentesque lacus ligula, condimentum sollicitudin nulla tincidunt in. Quisque ultrices commodo feugiat. Vivamus sit amet lacus at massa rutrum luctus.
-                        Nam mi ex,  vel
-                    </p>
-            </div>
-            <div class="col-md-3">
-                    <h1>hoofding1</h1>
-                    <p>
-                        Lorem ipsum dololorem congue Nulla hendrerit quis ipsum non cursus. Nam semper lorem ut convallis tincidunt. Quisque pellentesque lacus ligula, condimentum sollicitudin nulla tincidunt in. Quisque ultrices commodo feugiat. Vivamus sit amet lacus at massa rutrum luctus.
-                        Nam mi ex,  vel
-                    </p>
-            </div>
-            <div class="col-md-3">
-                    <h1>hoofding1</h1>
-                    <p>
-                        Lorem ipsum dololorem congue Nulla hendrerit quis ipsum non cursus. Nam semper lorem ut convallis tincidunt. Quisque pellentesque lacus ligula, condimentum sollicitudin nulla tincidunt in. Quisque ultrices commodo feugiat. Vivamus sit amet lacus at massa rutrum luctus.
-                        Nam mi ex,  vel
-                    </p>
-            </div>
-            <div class="col-md-3">
-                    <h1>hoofding1</h1>
-                    <p>
-                        Lorem ipsum dololorem congue Nulla hendrerit quis ipsum non cursus. Nam semper lorem ut convallis tincidunt. Quisque pellentesque lacus ligula, condimentum sollicitudin nulla tincidunt in. Quisque ultrices commodo feugiat. Vivamus sit amet lacus at massa rutrum luctus.
-                        Nam mi ex,  vel
-                    </p>
-            </div>
-        </div>
-</body>
 </html>
