--- a/framework-cards.html
+++ b/framework-cards.html
@@ -9,7 +9,9 @@
           <div class="col-md-3">
                 <div class="alert alert-info" role="alert">
                         <div class="card" style="width: 18rem;">
-                                <img class="card-img-top" src="Inipagi-Business-Economic-Announcement.svg" alt="Card image cap">
+                                <div class="p-5">
+                                    <img class="card-img-top" src="Inipagi-Business-Economic-Announcement.svg" alt="Card image cap">
+                                </div>
                                 <div class="card-body">
                                     <h5 class="card-title">Card title</h5>
                                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -21,7 +23,9 @@
             <div class="col-md-3">
                     <div class="alert alert-info" role="alert">
                             <div class="card" style="width: 18rem;">
-                                    <img class="card-img-top" src="Inipagi-Business-Economic-Checklist.svg" alt="Card image cap">
+                                    <div class="p-5">
+                                        <img class="card-img-top" src="Inipagi-Business-Economic-Checklist.svg" alt="Card image cap">
+                                    </div>
                                     <div class="card-body">
                                         <h5 class="card-title">Card title</h5>
                                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -32,8 +36,10 @@
                 </div>
                 <div class="col-md-3">
                         <div class="alert alert-info" role="alert">
-                                <div class="card" style="width: 18rem;">
-                                        <img class="card-img-top" src="Inipagi-Business-Economic-Get-money.svg" alt="Card image cap">
+                            <div class="card" style="width: 18rem;">
+                                        <div class="p-5">
+                                            <img class="card-img-top" src="Inipagi-Business-Economic-Get-money.svg" alt="Card image cap">
+                                        </div>
                                         <div class="card-body">
                                             <h5 class="card-title">Card title</h5>
                                             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -45,7 +51,9 @@
                     <div class="col-md-3">
                             <div class="alert alert-info" role="alert">
                                     <div class="card" style="width: 18rem;">
-                                            <img class="card-img-top" src="Inipagi-Business-Economic-Pie-chart.svg" alt="Card image cap">
+                                            <div class="p-5">
+                                                <img class="card-img-top" src="Inipagi-Business-Economic-Pie-chart.svg" alt="Card image cap">
+                                            </div>
                                             <div class="card-body">
                                                 <h5 class="card-title">Card title</h5>
                                                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -59,8 +67,10 @@
             <div class="col-md-3">
                   <div class="alert alert-info" role="alert">
                           <div class="card" style="width: 18rem;">
-                                  <img class="card-img-top" src="Inipagi-Business-Economic-Smartphone.svg" alt="Card image cap">
-                                  <div class="card-body">
+                            <div class="p-5">
+                                <img class="card-img-top" src="Inipagi-Business-Economic-Smartphone.svg" alt="Card image cap">
+                            </div>      
+                            <div class="card-body">
                                       <h5 class="card-title">Card title</h5>
                                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                                       <a href="#" class="btn btn-primary">Go somewhere</a>
@@ -71,7 +81,9 @@
               <div class="col-md-3">
                       <div class="alert alert-info" role="alert">
                               <div class="card" style="width: 18rem;">
+                                    <div class="p-5">
                                       <img class="card-img-top" src="Inipagi-Business-Economic-Store.svg" alt="Card image cap">
+                                    </div>
                                       <div class="card-body">
                                           <h5 class="card-title">Card title</h5>
                                           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -83,8 +95,10 @@
                   <div class="col-md-3">
                           <div class="alert alert-info" role="alert">
                                   <div class="card" style="width: 18rem;">
-                                          <img class="card-img-top" src="Inipagi-Business-Economic-Team-work.svg" alt="Card image cap">
-                                          <div class="card-body">
+                                        <div class="p-5">      
+                                            <img class="card-img-top" src="Inipagi-Business-Economic-Team-work.svg" alt="Card image cap">
+                                        </div> 
+                                            <div class="card-body">
                                               <h5 class="card-title">Card title</h5>
                                               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                                               <a href="#" class="btn btn-primary">Go somewhere</a>
@@ -95,8 +109,10 @@
                       <div class="col-md-3">
                               <div class="alert alert-info" role="alert">
                                       <div class="card" style="width: 18rem;">
-                                              <img class="card-img-top" src="Inipagi-Business-Economic-Transfer.svg" alt="Card image cap">
-                                              <div class="card-body">
+                                            <div class="p-5">  
+                                                <img class="card-img-top" src="Inipagi-Business-Economic-Transfer.svg" alt="Card image cap">
+                                            </div>
+                                                <div class="card-body">
                                                   <h5 class="card-title">Card title</h5>
                                                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                                                   <a href="#" class="btn btn-primary">Go somewhere</a>
