--- a/framework-cards.html
+++ b/framework-cards.html
@@ -4,11 +4,35 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
 </head>
-<body>
+<body class="alert alert-info" role="alert">
     <div class="row">
-          <div class="col-md-3">
-                <div class="alert alert-info" role="alert">
-                        <div class="card" style="width: 18rem;">
+        <div class="col-md-2">
+                <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                        <a class="navbar-brand" href="#">Navbar</a>
+                        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                          <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div class="collapse navbar-collapse" id="navbarNav">
+                          <ul class="navbar-nav">
+                            <li class="nav-item active">
+                              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                            </li>
+                            <li class="nav-item">
+                              <a class="nav-link" href="#">Features</a>
+                            </li>
+                            <li class="nav-item">
+                              <a class="nav-link" href="#">Pricing</a>
+                            </li>
+                            <li class="nav-item">
+                              <a class="nav-link disabled" href="#">Disabled</a>
+                            </li>
+                          </ul>
+                        </div>
+                      </nav>
+        </div>
+          <div class="col-md-2">
+                <div>
+                        <div class="card" style="width: 16rem;">
                                 <div class="p-5">
                                     <img class="card-img-top" src="Inipagi-Business-Economic-Announcement.svg" alt="Card image cap">
                                 </div>
@@ -20,9 +44,8 @@
                         </div>
                 </div>
             </div>
-            <div class="col-md-3">
-                    <div class="alert alert-info" role="alert">
-                            <div class="card" style="width: 18rem;">
+            <div class="col-md-2">
+                            <div class="card" style="width: 16rem;">
                                     <div class="p-5">
                                         <img class="card-img-top" src="Inipagi-Business-Economic-Checklist.svg" alt="Card image cap">
                                     </div>
@@ -32,11 +55,9 @@
                                         <a href="#" class="btn btn-primary">Go somewhere</a>
                                     </div>
                             </div>
-                    </div>
                 </div>
-                <div class="col-md-3">
-                        <div class="alert alert-info" role="alert">
-                            <div class="card" style="width: 18rem;">
+                <div class="col-md-2">
+                            <div class="card" style="width: 16rem;">
                                         <div class="p-5">
                                             <img class="card-img-top" src="Inipagi-Business-Economic-Get-money.svg" alt="Card image cap">
                                         </div>
@@ -46,11 +67,9 @@
                                             <a href="#" class="btn btn-primary">Go somewhere</a>
                                         </div>
                                 </div>
-                        </div>
                     </div>
-                    <div class="col-md-3">
-                            <div class="alert alert-info" role="alert">
-                                    <div class="card" style="width: 18rem;">
+                    <div class="col-md-2">
+                                    <div class="card" style="width: 16rem;">
                                             <div class="p-5">
                                                 <img class="card-img-top" src="Inipagi-Business-Economic-Pie-chart.svg" alt="Card image cap">
                                             </div>
@@ -61,12 +80,14 @@
                                             </div>
                                     </div>
                             </div>
+                    </div>
+                    <div class="col-md-2">
+            
                         </div>
-     </div>
      <div class="row">
+
             <div class="col-md-3">
-                  <div class="alert alert-info" role="alert">
-                          <div class="card" style="width: 18rem;">
+                          <div class="card" style="width: 16rem;">
                             <div class="p-5">
                                 <img class="card-img-top" src="Inipagi-Business-Economic-Smartphone.svg" alt="Card image cap">
                             </div>      
@@ -76,11 +97,9 @@
                                       <a href="#" class="btn btn-primary">Go somewhere</a>
                                   </div>
                           </div>
-                  </div>
               </div>
               <div class="col-md-3">
-                      <div class="alert alert-info" role="alert">
-                              <div class="card" style="width: 18rem;">
+                              <div class="card" style="width: 16rem;">
                                     <div class="p-5">
                                       <img class="card-img-top" src="Inipagi-Business-Economic-Store.svg" alt="Card image cap">
                                     </div>
@@ -90,11 +109,9 @@
                                           <a href="#" class="btn btn-primary">Go somewhere</a>
                                       </div>
                               </div>
-                      </div>
                   </div>
                   <div class="col-md-3">
-                          <div class="alert alert-info" role="alert">
-                                  <div class="card" style="width: 18rem;">
+                                  <div class="card" style="width: 16rem;">
                                         <div class="p-5">      
                                             <img class="card-img-top" src="Inipagi-Business-Economic-Team-work.svg" alt="Card image cap">
                                         </div> 
@@ -104,11 +121,9 @@
                                               <a href="#" class="btn btn-primary">Go somewhere</a>
                                           </div>
                                   </div>
-                          </div>
                       </div>
                       <div class="col-md-3">
-                              <div class="alert alert-info" role="alert">
-                                      <div class="card" style="width: 18rem;">
+                                      <div class="card" style="width: 16rem;">
                                             <div class="p-5">  
                                                 <img class="card-img-top" src="Inipagi-Business-Economic-Transfer.svg" alt="Card image cap">
                                             </div>
@@ -118,8 +133,7 @@
                                                   <a href="#" class="btn btn-primary">Go somewhere</a>
                                               </div>
                                       </div>
-                              </div>
-                          </div>
+                            </div>
        </div>
     
      </body>
