--- a/framework-cards.html
+++ b/framework-cards.html
@@ -19,11 +19,11 @@
                     <div class="tab-pane fade" id="v-pills-settings" role="tabpanel" aria-labelledby="v-pills-settings-tab">...</div>
                   </div>
     </div><br>
-    <div class="container m-3">
-        <div class="row m-3 d-flex flex-row">
+    <div class="container m-3 ">
+        <div class="row m-3 ">
           <div class="col-md-3">
-                <div class="">
-                        <div class="card m-3 d-flex align-items-center text-center" style="width: 16rem;">
+                <div class="d-flex ">
+                        <div class="card d-flex align-items-center text-center" style="width: 16rem;">
                                 <div class="p-5">
                                     <img class="card-img-top" src="Inipagi-Business-Economic-Announcement.svg" alt="Card image cap">
                                 </div>
@@ -36,7 +36,8 @@
                 </div>
             </div>
             <div class="col-md-3">
-                            <div class="card m-3 d-flex align-items-center text-center" style="width: 16rem;">
+                    <div class="d-flex ">
+                            <div class="card d-flex align-items-center text-center" style="width: 16rem;">
                                     <div class="p-5">
                                         <img class="card-img-top" src="Inipagi-Business-Economic-Checklist.svg" alt="Card image cap">
                                     </div>
@@ -46,9 +47,11 @@
                                         <a href="#" class="btn btn-primary">learn more</a>
                                     </div>
                             </div>
+                    </div>
                 </div>
                 <div class="col-md-3">
-                            <div class="card m-3d-flex align-items-center text-center" style="width: 16rem;">
+                        <div class="d-flex ">
+                            <div class="card d-flex align-items-center text-center" style="width: 16rem;">
                                         <div class="p-5">
                                             <img class="card-img-top" src="Inipagi-Business-Economic-Get-money.svg" alt="Card image cap">
                                         </div>
@@ -58,8 +61,10 @@
                                             <a href="#" class="btn btn-primary">learn more</a>
                                         </div>
                                 </div>
+                            </div>
                     </div>
                     <div class="col-md-3">
+                            <div class="d-flex ">
                                     <div class="card d-flex align-items-center text-center" style="width: 16rem;">
                                             <div class="p-5">
                                                 <img class="card-img-top" src="Inipagi-Business-Economic-Pie-chart.svg" alt="Card image cap">
@@ -72,10 +77,11 @@
                                     </div>
                             </div>
                     </div>
-                    
+                </div>        
         <div class="row">
          
             <div class="col-md-3">
+                    <div class="d-flex ">
                           <div class="card d-flex align-items-center text-center" style="width: 16rem;">
                             <div class="p-5">
                                 <img class="card-img-top" src="Inipagi-Business-Economic-Smartphone.svg" alt="Card image cap">
@@ -86,8 +92,10 @@
                                       <a href="#" class="btn btn-primary">learn more</a>
                                   </div>
                           </div>
+                    </div>
               </div>
               <div class="col-md-3">
+                    <div class="d-flex ">
                               <div class="card d-flex align-items-center text-center" style="width: 16rem;">
                                     <div class="p-5">
                                       <img class="card-img-top" src="Inipagi-Business-Economic-Store.svg" alt="Card image cap">
@@ -98,8 +106,10 @@
                                           <a href="#" class="btn btn-primary">learn more</a>
                                       </div>
                               </div>
+                        </div>
                   </div>
                   <div class="col-md-3">
+                        <div class="d-flex ">
                                   <div class="card d-flex align-items-center text-center" style="width: 16rem;">
                                         <div class="p-5">      
                                             <img class="card-img-top" src="Inipagi-Business-Economic-Team-work.svg" alt="Card image cap">
@@ -110,8 +120,10 @@
                                               <a href="#" class="btn btn-primary">learn more</a>
                                           </div>
                                   </div>
+                            </div>
                       </div>
                       <div class="col-md-3">
+                            <div class="d-flex ">
                                       <div class="card d-flex align-items-center text-center" style="width: 16rem;">
                                             <div class="p-5">  
                                                 <img class="card-img-top" src="Inipagi-Business-Economic-Transfer.svg" alt="Card image cap">
@@ -123,6 +135,7 @@
                                               </div>
                                       </div>
                             </div>
+                    </div>
             </div>
         </div>
      </body>
